# rules_ros

examples/bzlmod/: MODULE.bazel  dev.patch
