bazel_dep(name = "rules_ros")
archive_override(
    module_name = "rules_ros",
    integrity = "sha256-g6LeMe0p/Q9/JTppfPs8G2OIGfU2vwk42262pVrsN4Q=",
    strip_prefix = "rules_ros-049418ec41397080ec2fdff1e76eb7e95d9a0d57",
    urls = "https://github.com/mvukov/rules_ros/archive/049418ec41397080ec2fdff1e76eb7e95d9a0d57.tar.gz",
    patches = ["//:dev.patch"],
    patch_cmds = ["patch -p0 < $(location //:dev.patch)"],
)

bazel_dep(name = "rules_boost")
archive_override(
    module_name = "rules_boost",
    integrity = "sha256-I1iTdF3qckTmDRab+0yjA37Iya9AOGvEGJVoPtfpADM=",
    strip_prefix = "rules_boost-42d8155d8f20a1aee8ee20b7903a495bdfb9befd",
    urls = "https://github.com/nelhage/rules_boost/archive/42d8155d8f20a1aee8ee20b7903a495bdfb9befd.zip",
)
